...

  @override
  Widget build(BuildContext context) {
    return SingleChildScrollView(
      padding: const EdgeInsets.all(AppSpacing.lg),
      child: Column(
        key: const Key('publication_detail_content'),
        crossAxisAlignment: CrossAxisAlignment.start,
        children: [
          Text(publication.title, style: AppTextStyles.h1),
          const SizedBox(height: AppSpacing.xl),
          PublicationAuthorsRow(
            publication: publication,
...
